# vaultlock

./: .env.example  .gitignore  .npmrc  .rustfmt.toml  AGENTS.md  GUARDRAILS.md  README.md  SELF_HOSTING.md  TESTING.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
.husky/: pre-push
backend/: Cargo.toml
backend/.cargo/: audit.toml
backend/migrations/: 2026051599_create_users_table.sql  2026051601_create_refresh_tokens_table.sql  2026051901_create_vault_items_table.sql  2026051902_add_email_verification.sql  2026051902_rename_login_hash_to_master_password_hash.sql  2026051903_add_email_verification.sql  2026052001_vault_item_type_check.sql  2026052601_create_rate_limit_events_table.sql  2026060201_add_wrapped_dek_to_users.sql
backend/src/: auth.rs  lib.rs  main.rs  vault.rs
backend/src/auth/: jwt.rs  refresh_token.rs
backend/src/crypto/: aes_gcm.rs  argon2.rs  mod.rs
backend/src/middleware/: jwt_auth.rs  mod.rs  progressive_delay.rs  rate_limit.rs
backend/src/middleware/rate_limit/: memory.rs  mod.rs  postgres.rs  redis.rs
backend/src/models/: mod.rs  refresh_token.rs  user.rs  vault_item.rs
backend/src/repositories/: mod.rs  refresh_token_repository.rs  user_repository.rs  vault_item_repository.rs
backend/tests/: auth_integration.rs  crypto_tests.rs  integration.rs  rate_limit_integration.rs  vault_auth_integration.rs
backend/tests/common/: mod.rs
desktop/: README.md  biome.json  index.html  package.json  tsconfig.json
desktop/.cargo/: audit.toml
desktop/scripts/: macos-dev-runner.sh  tauri.mjs
desktop/src/: App.css  App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.macos.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
desktop/src/components/: AuthPanel.tsx  LoadingOverlay.tsx  PasswordStrengthMeter.tsx  ServerSettings.tsx  ServerStatusIndicator.tsx  TitleBar.tsx  VaultItemDetail.tsx
desktop/src/hooks/: useAutoLock.ts  useMountEffect.ts  useToast.ts  (+1 more)
docs/: BIOMETRIC_QUICK_UNLOCK.md  DEV_ENVIRONMENT.md  ISSUE_1_COMPLETED.md  PROJECT_PLAN.md  README_UPDATE_PROPOSED.md  SELF_HOSTING.md  TESTING.md  auth.md
docs/adr/: 0001-monorepo-layout.md  0002-mobile-distribution-strategy.md  0003-biometric-quick-unlock.md  0004-multi-device-dek-sharing.md  0005-shared-ui-package.md
docs/crypto/: argon2id.md
docs/issues/: 4-user-registration-login-flow.md
docs/plans/: browser-extension-redesign-2026.md  secure-biometric-unlock.md
extension/: README.md  components.json  package.json  plasmo.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
extension/e2e/: phase1-flows.spec.ts  phase1.spec.ts  playwright.config.ts
extension/scripts/: embed-autofill-tokens.mjs  patch-extension-csp.mjs  patch-plasmo-mount.mjs  plasmo-dev.mjs
extension/src/: background.ts  extension-ui.css  options.html  options.tsx  parcel.d.ts  popup.html  popup.tsx
frontend/: package.json
mobile/: package.json
scripts/: check-pinned-deps.mjs  test-backend.sh
shared/: package.json  tsconfig.json
shared/src/: domainMatching.ts  index.ts  loginSaveMatch.ts  passwordGenerator.ts  relatedDomains.ts  signupFormDetection.ts
shared/tests/: api.test.ts  crypto.test.ts  domainMatching.test.ts  loginSaveMatch.test.ts  passwordGenerator.test.ts  relatedDomains.test.ts  saveLoginHeuristics.test.ts  signupFormDetection.test.ts
ui/: package.json  tsconfig.json
ui/src/: index.ts
(+174 files in other folders)
