[package]
name = "vaultlock-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "macros", "uuid", "chrono", "derive"] }
base64 = "0.22"
dotenvy = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
subtle = "2"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
aes-gcm = "0.10"
aead = { version = "0.5", features = ["alloc"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
base64 = "0.22"
tokio-test = "0.4"
proptest = "1"
rand = "0.8"
serde_json = "1.0"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "macros", "derive"] }

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
